--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "unused-imports/no-unused-imports": "error",
     "react/react-in-jsx-scope": "off",
     "no-console": "warn",
+    "no-debugger": "warn",
     "unused-imports/no-unused-vars": [
       "warn",
       { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
